--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Khimchistka",
+  "name": "khimchistka",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -11,30 +11,47 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.2",
+    "@react-native-community/hooks": "^2.6.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/app": "^10.0.0",
+    "@react-native-firebase/storage": "^10.0.0",
+    "@react-navigation/drawer": "^5.11.4",
     "@react-navigation/native": "^5.8.9",
     "@react-navigation/stack": "^5.12.6",
+    "@types/react-native-dialog": "^5.6.2",
+    "babel-plugin-inline-import": "^3.0.0",
+    "lodash": "^4.17.20",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-dialog": "^6.1.2",
+    "react-native-fast-image": "^8.3.4",
+    "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-image-picker": "^2.3.4",
+    "react-native-modals": "^0.19.9",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.0",
-    "react-native-toast-message": "^1.3.4"
+    "react-native-svg": "^12.1.0",
+    "react-number-format": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
     "@types/jest": "^25.2.3",
+    "@types/lodash": "^4.14.165",
     "@types/react-native": "^0.63.2",
+    "@types/react-native-modals": "^0.19.0",
     "@types/react-test-renderer": "^16.9.2",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "babel-jest": "^25.1.0",
     "eslint": "^6.5.1",
+    "install": "^0.13.0",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
+    "npm": "^6.14.9",
     "react-test-renderer": "16.13.1",
     "typescript": "^3.8.3"
   },
